--- a/index.html
+++ b/index.html
@@ -421,6 +421,62 @@ code { background: #f4f4f4; padding: 2px 4px; border-radius: 3px; }
     <label><input type="radio" name="q49" value="greet"> greet</label>
     <label><input type="radio" name="q49" value="Error"> Error</label>
 </div>
+<h2>Python Code Implementation Questions (51–61)</h2>
+
+<div class="question" id="q50">
+    <p>51. Create a getter method for class attribute '_temperature' using @property</p>
+    <textarea name="q50" rows="3" cols="70" required></textarea>
+</div>
+
+<div class="question" id="q51">
+    <p>52. Create a setter for '_price' that ensures value is non-negative</p>
+    <textarea name="q51" rows="4" cols="70" required></textarea>
+</div>
+
+<div class="question" id="q52">
+    <p>53. Write code to display contents of 'data.txt'</p>
+    <textarea name="q52" rows="2" cols="70" required></textarea>
+</div>
+
+<div class="question" id="q53">
+    <p>54. Create code to read first 5 lines from 'log.csv'</p>
+    <textarea name="q53" rows="3" cols="70" required></textarea>
+</div>
+
+<div class="question" id="q54">
+    <p>55. Implement a read-only 'serial_number' property</p>
+    <textarea name="q54" rows="3" cols="70" required></textarea>
+</div>
+
+<div class="question" id="q55">
+    <p>56. Write code to append "new entry" to 'journal.txt'</p>
+    <textarea name="q55" rows="2" cols="70" required></textarea>
+</div>
+
+<div class="question" id="q56">
+    <p>57. Create setter that converts input to lowercase for '_name'</p>
+    <textarea name="q56" rows="4" cols="70" required></textarea>
+</div>
+
+<div class="question" id="q57">
+    <p>58. Handle FileNotFoundError when opening 'config.ini'</p>
+    <textarea name="q57" rows="5" cols="70" required></textarea>
+</div>
+
+<div class="question" id="q58">
+    <p>59. Create complete property 'age' with validation</p>
+    <textarea name="q58" rows="6" cols="70" required></textarea>
+</div>
+
+<div class="question" id="q59">
+    <p>60. Write code to count lines in 'data.txt'</p>
+    <textarea name="q59" rows="3" cols="70" required></textarea>
+</div>
+
+<div class="question" id="q60">
+    <p>61. Implement a property that calculates area from width/height</p>
+    <textarea name="q60" rows="5" cols="70" required></textarea>
+</div>
 
 
 
