--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  
 
 
-<style>
+
 .question { margin: 20px 0; padding: 10px; border-left: 4px solid #ddd; }
 .correct { background-color: #e6ffe6; border-color: #4CAF50; }
 .incorrect { background-color: #ffe6e6; border-color: #f44336; }
@@ -160,7 +160,7 @@ code, pre {
 
 
         
-    </style>
+
 </head>
 <body>
     <h1>Python MOCK EXAM (2 hours)</h1>
@@ -626,7 +626,7 @@ code, pre {
         <div id="results"></div>
     </form>
 
-    <div id="results"></div>
+  
 
     <script>
         const correctAnswers = {
@@ -684,8 +684,8 @@ code, pre {
     46: 'class Dog(Animal):',
     47: '__str__',
     48: '5',
-    49: 'Hello'
-              50: '@property\ndef temperature(self):\n    return self._temperature',
+    49: 'Hello',
+    50: '@property\ndef temperature(self):\n    return self._temperature',
     51: '@price.setter\ndef price(self, value):\n    if value >= 0:\n        self._price = value',
     52: 'with open("data.txt") as f:\n    print(f.read())',
     53: 'with open("log.csv") as f:\n    for _ in range(5):\n        print(f.readline())',
