--- a/index.html
+++ b/index.html
@@ -374,9 +374,9 @@ code, pre {
 </div>
 
 <div class="question" id="q26">
-    <p>27. Which loop will always run at least once?</p>
-    <label><input type="radio" name="q26" value="do-while (not in Python)" required> do-while (not in Python)</label>
-    <label><input type="radio" name="q26" value="for"> for</label>
+    <p>27. Which loop works best with the in keyword</p>
+    <label><input type="radio" name="q26" value="for" required> For</label>
+    <label><input type="radio" name="q26" value="do while"> Do while</label>
     <label><input type="radio" name="q26" value="while"> while</label>
 </div>
 
@@ -563,7 +563,7 @@ code, pre {
     <label><input type="radio" name="q49" value="greet"> greet</label>
     <label><input type="radio" name="q49" value="Error"> Error</label>
 </div>
-<h2>Python Code Implementation Questions (51–61)</h2>
+<h2>Python Code Implementation Questions </h2>
 
 <div class="question" id="q50">
     <p>51. Create a getter method for class attribute '_temperature' using @property</p>
@@ -659,7 +659,7 @@ code, pre {
     23: 'Nothing',
     24: 'break',
     25: '2 3 4 5',
-    26: 'do-while (not in Python)',
+    26: 'for',
     27: 'h i',
     28: 'pass',
     29: '1 4 7',
