--- a/index.html
+++ b/index.html
@@ -687,11 +687,11 @@ code, pre {
     49: 'Hello',
     50: '@property\ndef temperature(self):\n    return self._temperature',
     51: '@price.setter\ndef price(self, value):\n    if value >= 0:\n        self._price = value',
-    52: 'with open("data.txt") as f:\n    print(f.read())',
-    53: 'with open("log.csv") as f:\n    for _ in range(5):\n        print(f.readline())',
+    52: 'f=open("data.txt")\n    print(f.read())',
+    53: 'f=open("log.csv")\n    for _ in range(5):\n        print(f.readline())',
     54: '@property\ndef serial_number(self):\n    return self._sn',
-    55: 'with open("journal.txt", "a") as f:\n    f.write("new entry\\n")',
-    56: '@name.setter\ndef name(self, value):\n    self._name = value.lower()',
+    55: 'f=open("journal.txt", "a")\n    f.write("new entry\\n")',
+    56: 'def name(self, value):\n    self._name = value.lower()',
     57: 'try:\n    with open("config.ini") as f:\n        pass\nexcept FileNotFoundError:\n    print("File missing")',
     58: '@property\ndef age(self):\n    return self._age\n\n@age.setter\ndef age(self, value):\n    if value > 0:\n        self._age = value',
     59: 'with open("data.txt") as f:\n    print(len(f.readlines()))',
