--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@ code, pre {
 
 <div class="question" id="q2">
     <p>3. What is the output of <code>print(type(5))</code>?</p>
-    <label><input type="radio" name="q2" value="&lt;class 'int'&gt;" required> &lt;class 'int'&gt;</label>
+    <label><input type="radio" name="q2" value="classint" required> &lt;class 'int'&gt;</label>
     <label><input type="radio" name="q2" value="int"> int</label>
-    <label><input type="radio" name="q2" value="&lt;type 'int'&gt;"> &lt;type 'int'&gt;</label>
+    <label><input type="radio" name="q2" value="typeint"> &lt;type 'int'&gt;</label>
 </div>
 
 <div class="question" id="q3">
@@ -633,7 +633,7 @@ code, pre {
       
            0: 'aaa',
     1: 'my_var',
-    2: "<class 'int'>",
+    2: "classint",
     3: 'input()',
     4: '3',
     5: 'real',
